--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <selenide>5.15.0</selenide>
        <testng>6.14.3</testng>
+        <slf4j>1.7.25</slf4j>
+        <logback>1.2.3</logback>
+        <allure>2.10.0</allure>
     </properties>
     <dependencies>
         <dependency>
@@ -27,6 +30,23 @@
             <version>${testng}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>${allure}</version>
+        </dependency>
+
 
 
     </dependencies>
